Fix mobile overflow bug

--- a/src/sections/projects.module.scss
+++ b/src/sections/projects.module.scss
@@ -76,10 +76,3 @@
     opacity: 0.5;
 }
 
-@media only screen and (max-width: 600px) {
-    .project {
-        margin: 1rem;
-        width: 300px;
-        height: 200px;
-    }
-}
